# haskell-playground

./: .gitignore  LICENSE
category-theory-for-programmers/ch01/: README.md  challenges.hs
category-theory-for-programmers/ch02/: README.md  challenges.hs
programming-in-haskell-2e/: CHANGELOG.md  chapter-template.hs  programming-in-haskell-2e.cabal
programming-in-haskell-2e/ch02/: first-steps.hs
programming-in-haskell-2e/ch03/: types-and-classes.hs  types.hs
programming-in-haskell-2e/ch04/: defining-functions.hs
programming-in-haskell-2e/ch05/: list-comprehensions.hs  list-comprehesions.hs
programming-in-haskell-2e/ch06/: recursive-fuctions.hs  recursive-functions.hs
programming-in-haskell-2e/ch07/: higher-order-functions.hs
programming-in-haskell-2e/ch08/: declaring-types-and-classes.hs
